--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "benten-aliens",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ritik435.github.io/ben10-cardGame",
+  "homepage": "https://ritik435.github.io/ben10-aliens",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm build",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
